--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <button id="recordButton">
                 <i class="fas fa-microphone"></i>
             </button>
+            <div class="wave-container">
+                <div class="wave"></div>
+                <div class="wave"></div>
+                <div class="wave"></div>
+            </div>
         </div>
         <div id="status" class="status">Başlamak için mikrofona tıklayın</div>
         <div id="response" class="response"></div>
