--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                 <div class="wave"></div>
                 <div class="wave"></div>
             </div>
+            <div class="voice-level">
+                <div class="voice-level-inner"></div>
+            </div>
         </div>
         <div id="status" class="status">Başlamak için mikrofona tıklayın</div>
         <div id="response" class="response"></div>
