--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Clonic Voice Assistant</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Ayarlar Butonu -->
@@ -103,6 +104,13 @@
         </div>
         <div id="status" class="status">Başlamak için mikrofona tıklayın</div>
         <div id="response" class="response"></div>
+    </div>
+    <div class="particles">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
     </div>
     <script src="app.js"></script>
 </body>
